<resources>
    <string name="app_name">Remembering Japanese</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="return_page">Return Page</string>
    <string name="kanji">Kanji</string>
    <string name="to_favorite">Set as Favorite</string>
    <string name="your_text_here">Slide Info</string>
    <string name="audio_button">Audio Listening</string>
    <string name="on_reading">On Yomi:</string>
    <string name="kun_reading">Kun Yomi:</string>
    <string name="translation">Translation:</string>
    <string name="search">Search</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="n3">N3</string>
    <string name="n4">N4</string>
    <string name="n5">N5</string>
    <string name="only_favorite">Only your Favorites</string>
    <string name="kana_slides">Kana Slides</string>
    <string name="word_slides">Words Slides</string>
    <string name="kanji_reading">Kanji Reading:</string>
    <string name="settings">Settings</string>
    <string name="radomize_slide">Randomize Slides:</string>
    <string name="recomendation">Exercises recommendations</string>
    <string name="only_slides">Only Slides:</string>
    <string name="only_exercices">Only Exercises:</string>
    <string name="slide_count">Slide Count</string>
    <string name="drawing_count">Drawing Count:</string>
    <string name="pick_the_kana_romaji">Pick the right Kani/kana/Word:</string>
    <string name="pick_the_kanji">Pick the translation:</string>
    <string name="listening_count">Listen and pick:</string>
    <string name="Kana_to_kanji" >Kanji: Pick the right</string>
    <string name="Kanji_to_kana" >Kanji: Pick the sound</string>
    <string name="only_favorite_settings">Only Show Favorites:</string>
    <string name="clean_recomendations_text">Clean Recommendations</string>
    <string name="kanji_slides">Kanji Slides</string>
    <string name="wrong_awnser">Right awnser is</string>
    <string name="right_awnser">Right</string>
    <string name="Logo_Text">RK</string>
    <string name="welcome">Welcome!</string>
    <string name="dev_name"><a href="https://www.youtube.com/channel/UC8DRNRhPwYsnMt0aFgv9gxQ">Rick Komori</a></string>
    <string name="list_of_words">List of Words</string>
    <string name="remembering_japanese">Remembering Japanese</string>
    <string name="start">Start</string>
    <string name="to_settings">Go to Settings</string>
    <string name="kana">Kana</string>
    <string name="hiragana">Hiragana</string>
    <string name="katakana">Katakana</string>
    <string name="kanji_n5">Kanji N5</string>
    <string name="kanji_n4">Kanji N4</string>
    <string name="kanji_n3">Kanji N3</string>
    <string name="kanji_n2">Kanji N2</string>
    <string name="kanji_n1">Kanji N1</string>
    <string name="word">Vocabulary</string>
    <string name="word_n5">Vocabulary N5</string>
    <string name="word_n4">Vocabulary N4</string>
    <string name="word_n3">Vocabulary N3</string>
    <string name="word_n2">Vocabulary N2</string>
    <string name="word_n1">Vocabulary N1</string>
    <string name="dictionary">Dictionary</string>
    <string name="writing">Writing:</string>
    <string name="credits">
        E aí, tudo bem? Espero que este aplicativo seja útil de alguma forma para você. Eu o criei porque sentia falta desse tipo de app para me ajudar nos estudos. Ele é simples, mas pode te auxiliar a estudar quando você tiver um tempinho livre, como no transporte público.

Você pode encontrar o código fonte do projeto no <a href="https://github.com/komoririck/remembering-japanese">Github</a> e utilizá-lo da maneira que desejar, seja para fins comerciais ou não.

É importante ressaltar que o crédito pelas planilhas utilizadas como base de dados pertence ao <a href="http://www.tanos.co.uk/jlpt/">Jonathan Waller</a>. Fiz algumas alterações para o aplicativo e também traduzi para o português brasileiro, mas o mérito das tabelas é dele.

Se o app te ajudar e quiser retribuir, se puder se inscrever no meu <a href="https://www.youtube.com/@rickkomorich/videos">Canal</a> ajudaria bastante.

<a href="linktr.ee/rickkomori">Contato</a>
    </string>
</resources>