<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".CharacterViewActivity">
    <LinearLayout
        android:id="@+id/toolBar"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/general_main_bar"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_flipper">

        <ImageButton
            android:id="@+id/exit_button"
            android:layout_marginVertical="2dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/menu_icon_color"
            android:background="@drawable/baseline_keyboard_arrow_left_24"
            android:contentDescription="@string/return_page" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:textColorHint="@color/text_title_color"
            android:textColor="@color/text_title_color"
            android:text="@string/kanji"
            />

        <ImageButton
            android:id="@+id/star_image_button"
            android:layout_marginVertical="2dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/baseline_star_border_24"
            android:backgroundTint="@color/favorited_star"
            android:contentDescription="@string/to_favorite" />

    </LinearLayout>

    <ViewFlipper
        android:layout_margin="25dp"
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <ScrollView
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/word_text_view"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:textSize="75sp"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/button3"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toTopOf="@+id/kana_text_view"
                    android:text="@string/your_text_here"/>

                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="@color/general_icon_color"
                    android:background="@drawable/baseline_volume_up_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/word_text_view"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/kana_text_view"
                    android:contentDescription="@string/audio_button" />

                <TextView
                    android:background="@drawable/border"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/kana_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/text_color"
                    android:text="@string/on_reading"
                    android:gravity="center"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/word_text_view"
                    app:layout_constraintBottom_toTopOf="@+id/transl_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:background="@drawable/border"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/transl_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/text_color"
                    android:gravity="center"
                    android:text="@string/kun_reading"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/kana_text_view"
                    app:layout_constraintBottom_toTopOf="@+id/translate_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:background="@drawable/border"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/translate_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:text="@string/translation"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/transl_text_view"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </ViewFlipper>
</androidx.constraintlayout.widget.ConstraintLayout>
