<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background"
    tools:context=".SlideActivity">
    <LinearLayout
        android:id="@+id/toolBar"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/general_main_bar"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_flipper">

        <ImageButton
            android:id="@+id/exit_button"
            android:layout_marginVertical="2dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/baseline_keyboard_arrow_left_24"
            android:backgroundTint="@color/menu_icon_color"
            android:contentDescription="@string/return_page" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/menu_icon_color"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="cursive"
            android:textColorHint="@color/text_title_color"
            android:text="@string/word_slides"
            />

        <ImageButton
            android:id="@+id/star_image_button"
            android:layout_marginVertical="2dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/baseline_star_border_24"
            android:backgroundTint="@color/favorited_star"
            android:contentDescription="@string/to_favorite" />
    </LinearLayout>
    <ViewFlipper
        android:layout_margin="25dp"
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_button" >
        <ScrollView
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/word_text_view"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:textSize="35sp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/button3"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toTopOf="@+id/kana_text_view"
                    android:text="@string/your_text_here"/>

                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="@drawable/baseline_volume_up_24"
                    app:layout_constraintTop_toTopOf="parent"
                    android:backgroundTint="@color/general_icon_color"
                    app:layout_constraintLeft_toRightOf="@+id/word_text_view"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/kana_text_view"
                    android:contentDescription="@string/audio_button" />

                <TextView
                    android:background="@drawable/border"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/kana_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/kanji_reading"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/word_text_view"
                    app:layout_constraintBottom_toTopOf="@+id/transl_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:background="@drawable/border"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/transl_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:text="@string/translation"
                    android:textColor="@color/text_color"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/kana_text_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <ScrollView
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:background="@drawable/border">

                    <ImageView
                        android:id="@+id/image_view"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/drawing_view"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/your_text_here"
                        android:scaleType="fitXY" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:background="@drawable/border">

                    <com.example.apprk.DrawingView
                        android:id="@+id/drawing_view"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/image_view"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@drawable/border" />

                </LinearLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <ScrollView
            android:backgroundTint="@color/white"
            android:background="@color/white"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/translateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:textColor="@color/text_color"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/optionButtonLayout">

                    <ImageButton
                        android:id="@+id/translate_button3"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:layout_marginVertical="10dp"
                        android:backgroundTint="@color/general_icon_color"
                        android:layout_marginHorizontal="30dp"
                        android:background="@drawable/baseline_volume_up_24"
                        android:contentDescription="@string/audio_button" />

                    <TextView
                        android:id="@+id/translate_letter_text_view"
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:textSize="35sp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:maxLines="1"
                        android:textColor="@color/text_color"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/border"
                        android:text="@string/your_text_here"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/optionButtonLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/translateLayout"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <Button
                        android:layout_marginHorizontal="5dp"
                        android:id="@+id/option1Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/text_title_color"
                        android:textSize="22sp"
                        android:textColorHint="@color/menu_icon_color"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="x"/>

                    <Button
                        android:layout_marginHorizontal="5dp"
                        android:id="@+id/option2Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/text_title_color"
                        android:gravity="center"
                        android:textSize="22sp"
                        android:textColorHint="@color/menu_icon_color"
                        android:textAlignment="center"
                        android:text="x"/>

                    <Button
                        android:layout_marginHorizontal="5dp"
                        android:id="@+id/option3Button"
                        android:layout_width="match_parent"
                        android:textColor="@color/text_title_color"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="22sp"
                        android:backgroundTint="@color/simple_button_color"
                        android:textColorHint="@color/menu_icon_color"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:text="x"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </ViewFlipper>

    <Button
        android:backgroundTint="@color/general_main_bar"
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:gravity="center"
        android:textColor="@color/text_title_color"
        android:textAlignment="center"
        android:textColorHint="@color/text_title_color"
        app:layout_constraintTop_toBottomOf="@id/view_flipper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
